# skill-manager

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.trellis/spec/backend/: directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md  state-persistence.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-13-backend-runtime-spec/: prd.md  task.json
.trellis/tasks/05-13-backend-structure-spec/: prd.md  task.json
.trellis/workspace/codex/: index.md  journal-1.md
src/skill_manager/: __init__.py  derive.py  evals.py  export.py  frontmatter.py  models.py  project.py  routing.py  sources.py  text.py  workspace.py
tests/: test_cli.py  test_derive_export.py  test_evals.py  test_frontmatter.py  test_routing.py  test_sources.py
